Bring other aspects into line with latest version of spec
